styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}


body {
    background-color: #202122;
}

/* Header */

header {
    position: fixed;
    width: 100%;
    height: auto;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #202122;
}

nav {
    width: 94%;
    height: auto;
    display: flex;
    justify-content: space-around;
    align-items: center;
    padding-top: 10px;
    padding-bottom: 10px;
}

nav h1 a {
    text-decoration: none;
    color: #e9ff74;
    font-size: 2rem;
    font-family: 'Libre Baskerville', serif;
}

nav ul {
    display: flex;
    width: 50%;
    list-style: none;
    justify-content: space-around;
}

.list-item a {
    text-decoration: none;
    font-size: 1.5rem;
    color: white;
    font-family: 'Kanit', sans-serif;
}




/* Main */

main {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: auto;
    flex-wrap: wrap;
}

#home {
    width: 94%;
    min-height: calc(100vh - 130px);
    background-color: #CCEEBC;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    border-radius: 30px;
    text-align: center;
    margin-top: 80px;
    white-space: nowrap;
    scroll-margin-top: 100px;
    margin-bottom: 70px;
}


#home h2 {
    font-size: 3.1rem;
    color: black;
    font-family: 'Poppins', sans-serif;
    margin-bottom: 4rem;
    padding-left: 10px;
    padding-right: 10px;
}

#home p {
    font-size: 1.6rem;
    color: black;
    font-family: 'Poppins', sans-serif;
    white-space: normal; /* Allow line breaks */
    padding-left: 12px;
    padding-right: 12px;
}


#savings {
    width: 90%;
    height: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    border-radius: 30px;
    scroll-margin-top: 110px;
}

#savings-wordings {
    color: white;
    display: flex;
    flex-direction: column;
    width: 94%;
    margin-bottom: 40px;
}

#savings-wordings h3 {
    font-size: 2.1rem;
    text-align: center;
    font-family: 'Poppins', sans-serif;
    margin-bottom: 5px;
}

#savings-wordings p {
    font-size: 1.2rem;
    text-align: center;
    font-family: 'Poppins', sans-serif;
}





#banks-list {
    background-color: #e9ff74;
    display: grid;
    width: 100%;
    height: auto;
    grid-template-columns: 1fr 2fr 2fr 1fr 1fr;
    text-align: center;
    border-radius: 30px;
}

#banks-list > div {
    border-bottom: 1px solid #202122;

}

.banks-header {
    display: flex;
    align-items: center;
    justify-content: center;
    padding-top: 8px;
    padding-bottom: 8px;
}

.banks-header p {
    font-size: 1.4rem;
    font-family: 'Poppins', sans-serif;
}

.bank-header {
    display: flex;
    align-items: center;
    justify-content: center;
    padding-top: 8px;
    padding-bottom: 8px;
}

.bank-header p {
    font-size: 1.3rem;
    font-family: 'Poppins', sans-serif;
    margin-right: 5px;
}

.banks-logo {
    display: flex;
    align-items: center;
    justify-content: center;
    padding-top: 7px;
    padding-bottom: 7px;
}

.banks-logo img {
    width: 30%;
    height: auto;
}


.banks-savings {
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 1.2rem;
    font-family: 'Poppins', sans-serif;
}

.banks-interest {
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 1.2rem;
    font-family: 'Poppins', sans-serif;  
}


.expand-button {
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 1.2rem;
}

.interest-details {
    display: none;
    grid-column: 1 / span 4; /* Cover all five columns */
    position: relative;
    width: 100%;
}

.interest-details.visible {
    display: flex;
    padding-left: 60px;
    padding-top: 18px;
    padding-bottom: 18px;
}

.interest-details p {
    text-align: left;
    font-family: 'Poppins', sans-serif;
}


.expand-button-2 {
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 1.2rem;
}

.fa-chevron-up:hover,
.fa-chevron-down:hover {
    cursor: pointer;
}

.key-features {
    display: none;
    grid-column: 1 / span 5; /* Cover all five columns */
    position: relative;
    width: 100%;
}

.key-features.visible {
    display: flex;
    padding-left: 60px;
    padding-top: 18px;
    padding-bottom: 18px;
}

.key-features p {
    text-align: left;
    font-family: 'Poppins', sans-serif;
}



.update {
    display: flex;
    width: 98%;
    justify-content: flex-end;
    align-items: center;
}

.update i {
    font-size: .9rem;
    color: white;
    font-family: 'Poppins', sans-serif;
    margin-top: 5px;
}


footer {
    display: flex;
    justify-content: center;
    align-items: center;
}

#footer-content {
    background-color: #202122;
    border-radius: 30px;
    width: 94%;
    height: 120px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 50px;
    margin-bottom: 50px;
    flex-direction: column;
    border: 1px solid #e9ff74;
}

#footer-content p {
    font-size: 1.2rem;
    color: white;
    font-family: 'Kanit', sans-serif;
    white-space: normal; /* Allow line breaks */
    padding-left: 12px;
    padding-right: 12px;
}

